; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/deadfs/extr_dead_vnops.c_dead_blockmap.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/deadfs/extr_dead_vnops.c_dead_blockmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnop_blockmap_args = type { i32, i32, i32, i32, i32, i32, i32, i32 }

@EIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dead_blockmap(%struct.vnop_blockmap_args* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vnop_blockmap_args*, align 8
  store %struct.vnop_blockmap_args* %0, %struct.vnop_blockmap_args** %3, align 8
  %4 = load %struct.vnop_blockmap_args*, %struct.vnop_blockmap_args** %3, align 8
  %5 = getelementptr inbounds %struct.vnop_blockmap_args, %struct.vnop_blockmap_args* %4, i32 0, i32 7
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @chkvnlock(i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @EIO, align 4
  store i32 %10, i32* %2, align 4
  br label %37

11:                                               ; preds = %1
  %12 = load %struct.vnop_blockmap_args*, %struct.vnop_blockmap_args** %3, align 8
  %13 = getelementptr inbounds %struct.vnop_blockmap_args, %struct.vnop_blockmap_args* %12, i32 0, i32 7
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.vnop_blockmap_args*, %struct.vnop_blockmap_args** %3, align 8
  %16 = getelementptr inbounds %struct.vnop_blockmap_args, %struct.vnop_blockmap_args* %15, i32 0, i32 6
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.vnop_blockmap_args*, %struct.vnop_blockmap_args** %3, align 8
  %19 = getelementptr inbounds %struct.vnop_blockmap_args, %struct.vnop_blockmap_args* %18, i32 0, i32 5
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.vnop_blockmap_args*, %struct.vnop_blockmap_args** %3, align 8
  %22 = getelementptr inbounds %struct.vnop_blockmap_args, %struct.vnop_blockmap_args* %21, i32 0, i32 4
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.vnop_blockmap_args*, %struct.vnop_blockmap_args** %3, align 8
  %25 = getelementptr inbounds %struct.vnop_blockmap_args, %struct.vnop_blockmap_args* %24, i32 0, i32 3
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.vnop_blockmap_args*, %struct.vnop_blockmap_args** %3, align 8
  %28 = getelementptr inbounds %struct.vnop_blockmap_args, %struct.vnop_blockmap_args* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.vnop_blockmap_args*, %struct.vnop_blockmap_args** %3, align 8
  %31 = getelementptr inbounds %struct.vnop_blockmap_args, %struct.vnop_blockmap_args* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.vnop_blockmap_args*, %struct.vnop_blockmap_args** %3, align 8
  %34 = getelementptr inbounds %struct.vnop_blockmap_args, %struct.vnop_blockmap_args* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @VNOP_BLOCKMAP(i32 %14, i32 %17, i32 %20, i32 %23, i32 %26, i32 %29, i32 %32, i32 %35)
  store i32 %36, i32* %2, align 4
  br label %37

37:                                               ; preds = %11, %9
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local i32 @chkvnlock(i32) #1

declare dso_local i32 @VNOP_BLOCKMAP(i32, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
